--- a/public/index.html
+++ b/public/index.html
@@ -1,35 +1,30 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <title>北京知进教育</title>
+    <style>
+      html,
+      body {
+        width: 100%;
+        height: 100%;
+      }
 
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-  <title>
-    <%= htmlWebpackPlugin.options.title %>
-  </title>
-  <style>
-    html,
-    body {
-      width: 100%;
-      height: 100%;
-    }
+      #app {
+        width: 100%;
+        height: 100%;
+      }
 
-    #app {
-      width: 100%;
-      height: 100%;
-    }
+      [v-clock] {
+        display: none;
+      }
+    </style>
+  </head>
 
-    [v-clock] {
-      display: none;
-    }
-  </style>
-</head>
-
-<body>
-  <div id="app" v-clock></div>
-  <!-- built files will be auto injected -->
-</body>
-
+  <body>
+    <div id="app" v-clock></div>
+  </body>
 </html>
