--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,15 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta
+      name="keywords"
+      content="知进教育，北京知进教育，软件开发培训,北京IT技能培训,北京知进IT培训"
+    />
+    <meta
+      name="description"
+      content='知进教育IT培训，国内大型教育机构,知进专业紧跟企业需求,讲师天团以师傅带徒弟方式授课,实战经验倾囊相授,知进教育采用激励教学、成就驱动的教学模式,让学员学到真本事!"'
+    />
+    <link rel="stylesheet" href="/css/reset.css" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>北京知进教育</title>
     <style>
